加入函数功能描述

--- a/templates/train_plan.html
+++ b/templates/train_plan.html
@@ -79,93 +79,93 @@
                 <ul class="info_news_text info_news_text1 ">
                     <p class="info1"> 总进度</p>
                     <div class="process-parent1">
-                        <div class="progress-bar bg-success" style="width:40%"><p class="on2" id="on1">50%</p>
+                        <div class="progress-bar bg-success" style="width:0%"><p class="on2" id="on1">0%</p>
                         </div>
-                        <div class="progress-bar bg-warning" style="width:10%">
+                        <div class="progress-bar bg-warning" style="width:0%">
                         </div>
                     </div>
                     <p class="info2"> 思想政治</p>
                     <div class="process-parent2">
-                        <div class="progress-bar bg-success" style="width:40%"><p class="on2" id="on2">50%</p>
+                        <div class="progress-bar bg-success" style="width:0%"><p class="on2" id="on2">0%</p>
                         </div>
-                        <div class="progress-bar bg-warning" style="width:10%">
+                        <div class="progress-bar bg-warning" style="width:0%">
                         </div>
                     </div>
                     <p class="info3"> 外语</p>
                     <div class="process-parent3">
-                        <div class="progress-bar bg-success" style="width:40%"><p class="on2" id="on3">50%</p>
+                        <div class="progress-bar bg-success" style="width:0%"><p class="on2" id="on3">0%</p>
                         </div>
-                        <div class="progress-bar bg-warning" style="width:10%">
+                        <div class="progress-bar bg-warning" style="width:0%">
                         </div>
                     </div>
                     <p class="info4"> 文化素质</p>
                     <div class="process-parent4">
-                        <div class="progress-bar bg-success" style="width:40%"><p class="on2" id="on4">50%</p>
+                        <div class="progress-bar bg-success" style="width:0%"><p class="on2" id="on4">0%</p>
                         </div>
-                        <div class="progress-bar bg-warning" style="width:10%">
+                        <div class="progress-bar bg-warning" style="width:0%">
                         </div>
                     </div>
                     <p class="info5"> 体育</p>
                     <div class="process-parent5">
-                        <div class="progress-bar bg-success" style="width:40%"><p class="on2" id="on5">50%</p>
+                        <div class="progress-bar bg-success" style="width:0%"><p class="on2" id="on5">0%</p>
                         </div>
-                        <div class="progress-bar bg-warning" style="width:10%">
+                        <div class="progress-bar bg-warning" style="width:0%">
                         </div>
                     </div>
                     <p class="info6"> 军事</p>
                     <div class="process-parent6">
-                        <div class="progress-bar bg-success" style="width:40%"><p class="on2" id="on6">50%</p>
+                        <div class="progress-bar bg-success" style="width:0%"><p class="on2" id="on6">0%</p>
                         </div>
-                        <div class="progress-bar bg-warning" style="width:10%">
+                        <div class="progress-bar bg-warning" style="width:0%">
                         </div>
                     </div>
                     <p class="info7"> 健康教育</p>
                     <div class="process-parent7">
-                        <div class="progress-bar bg-success" style="width:40%"><p class="on2" id="on7">50%</p>
+                        <div class="progress-bar bg-success" style="width:0%"><p class="on2" id="on7">0%</p>
                         </div>
-                        <div class="progress-bar bg-warning" style="width:10%">
+                        <div class="progress-bar bg-warning" style="width:0%">
                         </div>
                     </div>
                     <p class="info8"> 数学</p>
                     <div class="process-parent8">
-                        <div class="progress-bar bg-success" style="width:40%"><p class="on2" id="on8">50%</p>
+                        <div class="progress-bar bg-success" style="width:0%"><p class="on2" id="on8">0%</p>
                         </div>
-                        <div class="progress-bar bg-warning" style="width:10%">
+                        <div class="progress-bar bg-warning" style="width:0%">
                         </div>
                     </div>
                     <p class="info9"> 物理</p>
                     <div class="process-parent9">
-                        <div class="progress-bar bg-success" style="width:40%"><p class="on2" id="on9">50%</p>
+                        <div class="progress-bar bg-success" style="width:0%"><p class="on2" id="on9">0%</p>
                         </div>
-                        <div class="progress-bar bg-warning" style="width:10%">
+                        <div class="progress-bar bg-warning" style="width:0%">
                         </div>
                     </div>
                     <p class="info10"> 计算机</p>
                     <div class="process-parent10">
-                        <div class="progress-bar bg-success" style="width:40%"><p class="on2" id="on10">50%</p>
+                        <div class="progress-bar bg-success" style="width:0%"><p class="on2" id="on10">0%</p>
                         </div>
-                        <div class="progress-bar bg-warning" style="width:10%">
+                        <div class="progress-bar bg-warning" style="width:0%">
                         </div>
                     </div>
                     <p class="info11"> 学科基础</p>
                     <div class="process-parent11">
-                        <div class="progress-bar bg-success" style="width:40%"><p class="on2" id="on11">50%</p>
+                        <div class="progress-bar bg-success" style="width:0%"><p class="on2" id="on11">0%</p>
                         </div>
-                        <div class="progress-bar bg-warning" style="width:10%">
+                        <div class="progress-bar bg-warning" style="width:0%">
                         </div>
                     </div>
                     <p class="info12"> 专业选修</p>
                     <div class="process-parent12">
-                        <div class="progress-bar bg-success" style="width:40%"><p class="on2" id="on12">50%</p>
+                        <div class="progress-bar bg-success" style="width:0%"><p class="on2" id="on12">0%</p>
                         </div>
-                        <div class="progress-bar bg-warning" style="width:10%">
+                        <div class="progress-bar bg-warning" style="width:0%">
                         </div>
                     </div>
                     <div class="submit">
                         <input type="submit" onclick="submit()" value="提交 ">
                     </div>
                     <div class="reset">
-                        <input type="reset" name="butReset" value="重置">
+                        <input type="reset" onclick="rebuild()" name="butReset" value="重置">
                     </div>
                 </ul>
             </div>
