--- a/templates/news_center.html
+++ b/templates/news_center.html
@@ -25,7 +25,8 @@
                  </div>
                </div>  
              </li>
-             <li class="nav_1"><a class="nav_but" href="{{ url_for('train_plan') }}">培养计划</a></li>
+             <li class="nav_1"><a class="nav_but" href="{{ url_for('recommed') }}">课程推荐</a></li>
+             <li class="nav_1"><a class="nav_but" href="{{ url_for('train_plan') }}">课程进度</a></li>
              <li class="nav_1"><a class="nav_but" href="{{ url_for('index') }}">首页</a></li>
          </ul>
     </div>
