归一化数据范围

--- a/templates/recommed.html
+++ b/templates/recommed.html
@@ -83,7 +83,7 @@
 </div>
 <div class="recommed_person">
     <center>
-        <p class="on" style="font-size:30px;">和您选课相似的朋友</p>
+        <p class="on" style="font-size:30px;">可能和您志同道和的朋友</p>
         <div class = "recommed_box" id="person_box"  style="width:900px; height:700px;border:1px solid;"></div>
     </center>
 </div>
