传送前端json添加score

--- a/templates/personal_information.html
+++ b/templates/personal_information.html
@@ -112,7 +112,7 @@
 
 							<div class="content">
 								<span class="follow-us">
-					                <a href="https://user.qzone.qq.com"><img src="../static/images/personal.jpg"</a>
+					                <a href="https://user.qzone.qq.com"><img src="../static/images/personal.jpg"></a>
 					                <a href="#"><i class="fa fa-linkedin"></i></a>
            						</span>
 							</div>
