--- a/templates/personal_information.html
+++ b/templates/personal_information.html
@@ -112,7 +112,11 @@
 
 							<div class="content">
 								<span class="follow-us">
-					                <a href="https://user.qzone.qq.com"><img src="../static/images/personal.jpg"></a>
+					                <a href="https://user.qzone.qq.com"><img src="../static/images/qq.jpg" style="height: 300px;width: 300px"></a>
+					                <a href="#"><i class="fa fa-linkedin"></i></a>
+                                    <a href="https://www.sina.com.cn/"><img src="../static/images/xl.jpg" style="height: 300px;width: 300px"></a>
+					                <a href="#"><i class="fa fa-linkedin"></i></a>
+                                    <a href="https://github.com/"><img src="../static/images/github.jpg" style="height: 300px;width: 300px"></a>
 					                <a href="#"><i class="fa fa-linkedin"></i></a>
            						</span>
 							</div>
