--- a/templates/train_plan.html
+++ b/templates/train_plan.html
@@ -186,7 +186,7 @@
                 </select>
                 <p></p>
                 <div class="scoreConfirm"  style="width:220px; height: 40px">
-                    <input type="reset" onclick="updataScore()" name="score" value="确定评分">
+                    <input type="reset" id='btnScore' onclick="updataScore()" name="score" value="确定评分">
                 </div>
             </ul>
 
