--- a/templates/course_discussion.html
+++ b/templates/course_discussion.html
@@ -22,7 +22,7 @@
                 <li class="nav_1"><a class="nav_but" href="{{ url_for('news_center') }}">课程论坛</a>
                     <div class="nav_slide">
                         <div class="nav_slide1">
-                            <a href="xinwenzhongxin.html">课程讨论<span>
+                            <a href="{{ url_for('news_center') }}">课程讨论<span>
                             <img src="../static/images/siade_bg1.png"/></span></a>
                         <a href="{{ url_for('course_discussion') }}">发布话题<span>
                             <img src="../static/images/siade_bg1.png"/></span></a>
