--- a/templates/news_center.html
+++ b/templates/news_center.html
@@ -81,7 +81,7 @@
     <div class="menu_box">
        <p class="menu_box_title">课程论坛<span>news</span></p>
        <ul class="menu_box1">
-          <li><a href="">课程讨论</a></li>
+          <li><a href="{{ url_for('news_center') }}">课程讨论</a></li>
           <li><a href="{{ url_for('course_discussion') }}">发布话题</a></li>
        </ul>
     </div>
